# booplaysgba

./: .editorconfig  .env  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  memo.full.sh  memo.sh  package-lock.json  package.json  pyproject.toml  workspace.code-workspace
.devcontainer/: devcontainer.json
src/: Controller.svelte  admin.html  client.html  emulator.py  ffmpeg_manager.py  redis_manager.py  server.py  settings.py  state_manager.py  utils.py
src/emulator/: Dockerfile  env.py  ffmpeg.py  main.py  pyproject.toml  redis_manager.py  requirements.txt  state_manager.py  states.py
src/routes/: Admin.svelte  Controller.svelte
src/server/: Dockerfile  env.py  main.py  pyproject.toml  requirements.txt
