[tool.poetry]
name = "booplaysgba"
version = "0.1.0"
description = "Émulateur collaboratif et interactif pour patienter dans le B00"
authors = ["Laureηt <laurentfainsin@protonmail.com>"]
license = "MIT"
packages = [
    { include = "mgba", from = "mgba/build/python/lib.linux-x86_64-3.9" }
]
[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
websockets = "^10.0"
numpy = "^1.21.1"
pyvirtualcam = "^0.8.0"
cffi = "^1.15.0"
cached-property = "^1.5.2"
Pillow = "^8.4.0"
flake8-docstrings = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
bandit = "^1.7.0"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  \.git
  \.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
