[tool.poetry]
name = "booplaysgba_server"
version = "0.1.0"
description = "Émulateur collaboratif pour patienter dans le B00"
authors = ["Laureηt <laurentfainsin@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
websockets = "^10.1"
redis = "^3.5.3"


[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pre-commit = "^2.15.0"
bandit = "^1.7.0"
isort = "^5.9.3"
mypy = "^0.931"
types-redis = "^3.5.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  \.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
